--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@
 title: Gregory Jacobs
 email: greg@greg-jacobs.com
 description: > # this means to ignore newlines until "baseurl:"
-  Articles and posts about web application development, architecture, testing,
-  and general best practices developed/discovered over the years.
+  My website with me, my résumé, and links to my works.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://gregjacobs.github.io" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
